[package]
name = "lurk_lcsc"
version = "2.3.1"
authors = ["Riley Ziegler", "S. Seth Long, Ph.D"]
edition = "2024"
license = "MIT"
description = "LURK Protocol for Rust"

[features]
logging = ["dep:tracing", "dep:tabled"]
custom-cmds = []

[dependencies]
bitflags = { version = "2.9.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.143"
tabled = { version = "0.20.0", optional = true }
tracing = { version = "0.1.41", optional = true }
