[package]
name = "lurk_lcsc"
version = "2.3.11"
authors = ["Riley Ziegler", "S. Seth Long, Ph.D"]
categories = ["network-programming"]
description = "LCSC LURK Protocol written in Rust"
documentation = "https://docs.rs/lurk-lcsc"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/The24Kings/lurk_lcsc"
rust-version = "1.85"

[dependencies]
bitflags = { version = "2.10.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
tabled = { version = "0.20.0", optional = true }
tracing = { version = "0.1.41", optional = true }

[package.metadata.docs.rs]
features = ["tracing"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]

[features]
default = []

# Logging and pretty-printing of packet data using `tracing`
#
#    https://docs.rs/tracing/latest/tracing/
tracing = ["dep:tracing", "dep:tabled"]
